[package]
name = "rust-config-tree"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Recursive include tree utilities for layered configuration files."
documentation = "https://docs.rs/rust-config-tree"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["config", "include", "tree", "recursive"]
categories = ["config"]
exclude = ["Cargo.lock"]

[dependencies]
